--- a/Puzzles/AOC/style.css
+++ b/Puzzles/AOC/style.css
@@ -38,12 +38,12 @@ td{
     height: 100px;
 }
 
-tr:nth-child(odd) td:nth-child(odd){
+tr:nth-child(odd) td:nth-child(even){
     background-color: black;
     color: white;
 }
 
-tr:nth-child(even) td:nth-child(even){
+tr:nth-child(even) td:nth-child(odd){
     background-color: black;
     color: white;
 }
@@ -51,6 +51,19 @@ tr:nth-child(even) td:nth-child(even){
 ul{
     display: table;
     margin: 0 auto;
+    list-style-type: none;
+    padding: 0;
+    font-size: 30px;
+}
+
+li{
+    padding: 0 10px;
+}
+
+p{
+    text-align: center;
+    margin: 20px auto;
+    font-size: 40px;
 }
 
 #puzzle{
